--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,26 @@
-openai==1.99.9
+azure-ai-documentintelligence==1.0.2
+pandas==2.2.2
+pathlib==1.0.1
+pymupdf==1.26.3
+tools==1.0.2
 python-dotenv==1.1.1
 langchain_openai==0.3.28
+rapidfuzz
 langchain_community==0.3.27
+chromadb==1.0.16
+azure-identity==1.24.0
+azure-search-documents==11.5.3
+dotenv
+langchain_tavily==0.2.11
+langgraph==0.6.4
+langgraph-checkpoint-sqlite==2.0.11
+simple-colors==0.1.5
+langchain_chroma==0.2.5
+rank_bm25==0.2.2
+openai==1.99.9
 langchain_core==0.3.72
-chromadb==1.0.15
 neo4j==5.28.2
 neo4j-graphrag==1.9.1
-beautifulsoup4==4.13.4
-html2text==2025.4.15
-requests==2.32.3
 neo4j-graphrag[fuzzy-matching]
-rank_bm25==0.2.2
 openpyxl==3.1.5
 langfuse==3.2.5
